arewein-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: arewein
    component: backend
  name: backend-svc
  namespace: arewein
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: arewein
    component: backend
  type: ClusterIP
