arewein-app/arewein-app.yaml

# deployment-arewein.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arewein-deployment
  namespace: arewein
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arewein
  template:
    metadata:
      labels:
        app: arewein
    spec:
      containers:
      - name: arewein-container
        image: mmodi/arewein-app:latest
        ports:
        - containerPort: 80

---

# service-arewein.yaml
apiVersion: v1
kind: Service
metadata:
  name: arewein-service
  namespace: arewein
spec:
  selector:
    app: arewein
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

# ingress-arewein.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arewein-ingress
  namespace: arewein
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-arewein"
spec:
  tls:
  - hosts:
    - arewein.com
    - www.arewein.com   # Include www subdomain here
    secretName: arewein-tls
  rules:
  - host: arewein.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: arewein-service
            port:
              number: 80
  - host: www.arewein.com   # Add a rule for www subdomain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: arewein-service
            port:
              number: 80
