arewein-app/ingress-arewein.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arewein-ingress
  namespace: arewein
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-arewein"
spec:
  tls:
  - hosts:
    - arewein.com
    - www.arewein.com   # Include www subdomain here
    secretName: arewein-tls
  rules:
  - host: arewein.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: arewein-service
            port:
              number: 80
  - host: www.arewein.com   # Add a rule for www subdomain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: arewein-service
            port:
              number: 80
