arewein-app/ingress.yaml
# ingress-arewein.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arewein-ingress
  namespace: arewein
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-arewein"
spec:
  tls:
  - hosts:
    - arewein.com
    - www.arewein.com
    secretName: arewein-tls
  rules:
  - host: arewein.com
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api-docs
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
